completed cv file

--- a/index.html
+++ b/index.html
@@ -1,11 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Full stack software engineer with expertise in backend technologies, including Node.js, Docker, and SQL."
+    />
+    <title>Elizabeth Mazorra Vidal | Software Engineer</title>
+  </head>
+
+  <body>
+    <nav>
+      <a href="#skills">Skills</a>
+      <a href="#education">Education</a>
+      <a href="#experience">Experience</a>
+    </nav>
+    <header>
+      <h1>Elizabeth Mazorra Vidal</h1>
+      <h3>Backend Sorcerer</h3>
+      <address>
+        123 Main Street<br />
+        Brooklyn, NY 11201<br />
+        (123) 456-7890<br />
+        no_reply@example.com
+      </address>
+    </header>
+
+    <main>
+      <section id="skills">
+        <h3>Skills</h3>
+        <p>
+          HTML, CSS, JavaScript, Accessibility, AWS, Jest, Black Magic,
+          Summoning Spells
+        </p>
+      </section>
+
+      <section id="education">
+        <h3>Education</h3>
+        <h2>
+          Hexside School of Magic and Demonics, The Boiling Isles - Master of
+          Potion Arts
+        </h2>
+        <p>
+          Sept 2013 to Dec 2014<br />
+          I did nothing of interest at this university.
+        </p>
+      </section>
+
+      <section id="experience">
+        <h3>Experience</h3>
+        <h2>Disney, Florida - Full Stack Engineer</h2>
+        <p>Sept 2020 to Present</p>
+        <ul>
+          <li>
+            Watched over 700 hours of true crime while fixing bug issues in the
+            DisneyPlus app
+          </li>
+          <li>Had nothing to do with any of the live action remakes</li>
+          <li>Actively advocated against the live action remakes</li>
+        </ul>
+
+        <h2>Jersey Housewife, New Jersey - Reality Star</h2>
+        <p>Jan 2014 - Sept 2020</p>
+        <ul>
+          <li>Got into at least five altercations over one season</li>
+          <li>Asserted more than 1000 times that I am, indeed, from Jersey</li>
+          <li>It's a Jersey thing</li>
+        </ul>
+      </section>
+    </main>
+
+    <footer>
+      <a href="https://github.com/emazorra" target="_blank">GitHub</a>
+      <a
+        href="https://www.linkedin.com/in/elizabethmazorravidal/"
+        target="_blank"
+        >LinkedIn</a
+      >
+    </footer>
+  </body>
 </html>
