added favicon and added og tags ot meet all requirements

--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
       content="Full stack software engineer with expertise in backend technologies, including Node.js, Docker, and SQL."
     />
     <title>Elizabeth Mazorra Vidal | Software Engineer</title>
+    <link rel="icon" href="favicon.ico" type="image/png" />
+
+    <meta
+      property="og:title"
+      content="Elizabeth Mazorra Vidal | Software Engineer"
+    />
+    <meta
+      property="og:description"
+      content="Full stack software engineer with expertise in backend technologies, including Node.js, Docker, and SQL."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://yourdomain.com" />
+    <meta property="og:image" content="https://yourdomain.com/og-image.png" />
   </head>
 
   <body>
